# Retail-AI-MVP

./: Dockerfile  main.py  pyproject.toml  requirements.txt
app/: answer_generator.py  config.py  database.py  main.py  models.py  schemas.py  text_to_sql.py
scripts/: load_data.py  test.ipynb
